--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 		    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
 		    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
 		  </small>
+      <%= debug(params) if Rails.env.development? %>
 		  <nav>
 		    <ul>
 		      <li><%= link_to "About",   '#' %></li>
