Lastly, admins can see the stuff

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.input :presentation %>
     <%= f.input :habits %>
     <%= f.input :experience %>
-    <%= f.input :type %>
+    <%= f.input :type_of_users %>
     <%= f.hidden_field :active %>
   </div>
 
