--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -38,7 +38,7 @@
         <td><%= user.presentation %></td>
         <td><%= user.habits %></td>
         <td><%= user.experience %></td>
-        <td><%= user.type %></td>
+        <td><%= user.type_of_users %></td>
         <td><%= user.active %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
