--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,5 @@
 @import "bootstrap-sprockets";
-@import 'bootstrap';
-
+@import "bootstrap";
 
 /* mixins, variables, etc. */
 
@@ -38,7 +37,6 @@ h1 {
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
-  margin-top: 50px
 }
 
 h2 {
