--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,19 +27,45 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-left">
-            <li><%= link_to "Home",   root_path %></li>
-            <li><%= link_to "Companies", '#' %></li>
-            <li><%= link_to "Canditates", '#' %></li>
-            <li><%= link_to "Jobs", '#' %></li>
-            <li><%= link_to "News", '#' %></li>
+            <% if logged_in? && current_user.type_of_users == 3%>
+              <li><%= link_to "Home",   root_path %></li>
+              <li><%= link_to "Users", users_path %></li>
+              <li><%= link_to "Notices", '#' %></li>
+            <%else %>
+              <li><%= link_to "Home",   root_path %></li>
+              <li><%= link_to "Companies", '#' %></li>
+              <li><%= link_to "Canditates", '#' %></li>
+              <li><%= link_to "Jobs", '#' %></li>
+              <li><%= link_to "News", '#' %></li>
+            <% end %>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Register",   '#' %></li>
-            <li><%= link_to "Log in", '#' %></li>
+            <% if logged_in? %>
+              <li><%= link_to current_user.name, current_user %></li>
+              <li><%= link_to "Log-out", logout_path, method: "delete" %></li>
+            
+
+            <% else %>
+                <li><%= link_to "Register",   signup_path %></li>
+                <li><%= link_to "Log in", login_path %></li>
+            <% end %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+
+    <% if logged_in? %>
+      <% if current_user.type_of_users == 3 %>
+      
+      <% else %>
+        <li><%= link_to current_user.name, '#' %></li>
+        <li><%= link_to "Log-out", '#' %></li>
+      <% end %>  
+
+    <% else %>
+        <li><%= link_to "Register",   '#' %></li>
+        <li><%= link_to "Log in", '#' %></li>
+    <% end %>
   </div>
 </header>
 
