--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,74 +1,83 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
+<aside class="col-md-4">
+  <section>
+    <%= link_to image_tag(gravatar_url(@user)), @user %>
+  </section>
+  <section>
+    <p>
+    <strong>Email:</strong>
+    <%= @user.email %>
+    </p>
 
-<p>
-  <strong>Password digest:</strong>
-  <%= @user.password_digest %>
-</p>
+    <p>
+      <strong>Password digest:</strong>
+      <%= @user.password_digest %>
+    </p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
+    <p>
+      <strong>Name:</strong>
+      <%= @user.name %>
+    </p>
 
-<p>
-  <strong>Address:</strong>
-  <%= @user.address %>
-</p>
+    <p>
+      <strong>Address:</strong>
+      <%= @user.address %>
+    </p>
 
-<p>
-  <strong>Post code:</strong>
-  <%= @user.post_code %>
-</p>
+    <p>
+      <strong>Post code:</strong>
+      <%= @user.post_code %>
+    </p>
 
-<p>
-  <strong>Contact:</strong>
-  <%= @user.contact %>
-</p>
+    <p>
+      <strong>Contact:</strong>
+      <%= @user.contact %>
+    </p>
 
-<p>
-  <strong>Personal page:</strong>
-  <%= @user.personal_page %>
-</p>
+    <p>
+      <strong>Personal page:</strong>
+      <%= @user.personal_page %>
+    </p>
 
-<p>
-  <strong>Birthday:</strong>
-  <%= @user.birthday %>
-</p>
+    <p>
+      <strong>Birthday:</strong>
+      <%= @user.birthday %>
+    </p>
 
-<p>
-  <strong>Id number:</strong>
-  <%= @user.id_number %>
-</p>
+    <p>
+      <strong>Id number:</strong>
+      <%= @user.id_number %>
+    </p>
 
-<p>
-  <strong>Presentation:</strong>
-  <%= @user.presentation %>
-</p>
+    <p>
+      <strong>Presentation:</strong>
+      <%= @user.presentation %>
+    </p>
 
-<p>
-  <strong>Habits:</strong>
-  <%= @user.habits %>
-</p>
+    <p>
+      <strong>Habits:</strong>
+      <%= @user.habits %>
+    </p>
 
-<p>
-  <strong>Experience:</strong>
-  <%= @user.experience %>
-</p>
+    <p>
+      <strong>Experience:</strong>
+      <%= @user.experience %>
+    </p>
 
-<p>
-  <strong>Type:</strong>
-  <%= @user.type %>
-</p>
+    <p>
+      <strong>Type:</strong>
+      <%= @user.type_of_users %>
+    </p>
 
-<p>
-  <strong>Active:</strong>
-  <%= @user.active %>
-</p>
+    <p>
+      <strong>Active:</strong>
+      <%= @user.active %>
+    </p>
+    
+  </section>
+  
+</aside>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
