Listing Canditate, Companies, Login-Logut, Authorization

--- a/app/views/canditates/index.html.erb
+++ b/app/views/canditates/index.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Listing Users</h1>
+
+<h1>Listing Canditates</h1>
 
 <table>
   <thead>
@@ -31,5 +31,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New User', before_sign_up_path %>
