--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= hidden_field_tag :type_of_users, @user.type_of_users  %>
     <%= f.input :email %>
     <%= f.input :password %>
     <%= f.input :password_confirmation %>
@@ -15,11 +16,11 @@
     <%= f.input :presentation %>
     <%= f.input :habits %>
     <%= f.input :experience %>
-    <%= f.input :type_of_users %>
-    <%= f.hidden_field :active %>
+    <%= f.hidden_field :active  %>
+    
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit  ,class: "btn btn-primary" %>
   </div>
 <% end %>
