--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -135,7 +135,7 @@ aside {
       text-align: left;
       letter-spacing: -1px;
       margin-bottom: 3px;
-      margin-top: 0px;
+      margin-top: 50px;
     }
   }
 }
@@ -250,3 +250,5 @@ span.picture {
 .users.follow {
   padding: 0;
 }
+
+/* */
