--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,7 +1,27 @@
 
 
 <h1>Listing Companies</h1>
+<div class= "container">
+  <%= form_tag(companies_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Search Posts" , class: "form-control" %>
+    
+    <br>
+    <%= submit_tag "Search", class: "btn btn-primary btn-sm" %>
+  <% end %>  
+</div>
 
+
+<br>
+<% if @companies.present? %>
+  <ul class="users">
+    <%= render @companies %>
+  </ul>
+  
+<% else %>
+  <p>There are no posts containing the term(s) <%= params[:search] %>.</p>
+<% end %>
+
+<!--
 <table>
   <thead>
     <tr>
@@ -13,9 +33,9 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
+  
   <tbody>
-    <% @users.each do |user| %>
+    <% @companies.each do |user| %>
       <tr>
         <td><%= user.email %></td>
         <td><%= user.password_digest %></td>
@@ -29,5 +49,5 @@
     <% end %>
   </tbody>
 </table>
-
+-->
 <br>
