--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,53 +1,32 @@
 
-
 <h1>Listing Companies</h1>
 <div class= "container">
   <%= form_tag(companies_path, :method => "get", id: "search-form") do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Search Posts" , class: "form-control" %>
-    
+   
+    <%= text_field_tag :search, params[:search], placeholder: "Search Companies" , class: "form-control" %>  
+    <br>
+    <span class="label label-default">Select Profession area</span>
+    <br>
+    <%= select_tag "profession", ("<option></option>" + options_from_collection_for_select(@professions, "id", "area_name", @prev_profession)).html_safe , class: "form-control" %>
+    <br>
+    <span class="label label-default">Select City </span>
+    <br>
+    <%= select_tag "city", ("<option></option>" + options_from_collection_for_select(@cities, "id", "city_name", @prev_city)).html_safe , class: "form-control" %>
     <br>
     <%= submit_tag "Search", class: "btn btn-primary btn-sm" %>
+    
   <% end %>  
 </div>
-
-
 <br>
-<% if @companies.present? %>
-  <ul class="users">
-    <%= render @companies %>
-  </ul>
-  
-<% else %>
-  <p>There are no posts containing the term(s) <%= params[:search] %>.</p>
-<% end %>
+<div class= "container">
+  <% if @companies.present? %>
+    <ul class="users">
+      <%= render @companies %>
+    </ul>
+    
+  <% else %>
+    <p>There are no posts containing the term(s) <%= params[:search] %>.</p>
+  <% end %>
+</div>
 
-<!--
-<table>
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th>Password digest</th>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  
-  <tbody>
-    <% @companies.each do |user| %>
-      <tr>
-        <td><%= user.email %></td>
-        <td><%= user.password_digest %></td>
-        <td><%= user.name %></td>
-        <td><%= user.type_of_users %></td>
-        <td><%= user.active %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
--->
 <br>
