--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,20 +15,20 @@
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
       	<%= yield %>
-      	<footer class="footer">
-		  <small>
+      <footer class="footer">
+		  <!--<small>
 		    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
 		    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
-		  </small>
+		  </small>-->
       <%= debug(params) if Rails.env.development? %>
-		  <nav>
+		  <!--<nav>
 		    <ul>
 		      <li><%= link_to "About",   '#' %></li>
 		      <li><%= link_to "Contact", '#' %></li>
 		      <li><a href="http://news.railstutorial.org/">News</a></li>
 		    </ul>
-		  </nav>
-		</footer>
+		  </nav>-->
+	    </footer> -->
     </div>
   </body>
 </html>
