--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,83 +1,15 @@
-<p id="notice"><%= notice %></p>
 
-<aside class="col-md-4">
-  <section>
-    <%= link_to image_tag(gravatar_url(@user)), @user %>
-  </section>
-  <section>
-    <p>
-    <strong>Email:</strong>
-    <%= @user.email %>
-    </p>
-
-    <p>
-      <strong>Password digest:</strong>
-      <%= @user.password_digest %>
-    </p>
-
-    <p>
-      <strong>Name:</strong>
-      <%= @user.name %>
-    </p>
-
-    <p>
-      <strong>Address:</strong>
-      <%= @user.address %>
-    </p>
-
-    <p>
-      <strong>Post code:</strong>
-      <%= @user.post_code %>
-    </p>
-
-    <p>
-      <strong>Contact:</strong>
-      <%= @user.contact %>
-    </p>
-
-    <p>
-      <strong>Personal page:</strong>
-      <%= @user.personal_page %>
-    </p>
-
-    <p>
-      <strong>Birthday:</strong>
-      <%= @user.birthday %>
-    </p>
-
-    <p>
-      <strong>Id number:</strong>
-      <%= @user.id_number %>
-    </p>
-
-    <p>
-      <strong>Presentation:</strong>
-      <%= @user.presentation %>
-    </p>
-
-    <p>
-      <strong>Habits:</strong>
-      <%= @user.habits %>
-    </p>
-
-    <p>
-      <strong>Experience:</strong>
-      <%= @user.experience %>
-    </p>
-
-    <p>
-      <strong>Type:</strong>
-      <%= @user.type_of_users %>
-    </p>
-
-    <p>
-      <strong>Active:</strong>
-      <%= @user.active %>
-    </p>
-    
-  </section>
-  
-</aside>
-
+<div class="row">
+  <aside class="col-md-2">
+    <section class="user_info">
+      <%= render 'shared/user_basic_info' %>
+    </section>
+  </aside>
+  <div class="col-md-10">
+    <section class="micropost_form">
+      <%= render 'shared/user_info' %>
+    </section>
+  </div>
+</div>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
