--- a/app/views/canditates/index.html.erb
+++ b/app/views/canditates/index.html.erb
@@ -7,11 +7,11 @@
     <br>
     <span class="label label-default">Select Profession area</span>
     <br>
-    <%= select_tag "profession", ("<option></option>" + options_from_collection_for_select(@professions, "id", "area_name", @prev_profession)).html_safe , class: "form-control" %>
+    <%= select_tag "profession", ("<option></option>" + options_from_collection_for_select(professions, "id", "area_name", @prev_profession)).html_safe , class: "form-control" %>
     <br>
     <span class="label label-default">Select City </span>
     <br>
-    <%= select_tag "city", ("<option></option>" + options_from_collection_for_select(@cities, "id", "city_name", @prev_city)).html_safe , class: "form-control" %>
+    <%= select_tag "city", ("<option></option>" + options_from_collection_for_select(cities, "id", "city_name", @prev_city)).html_safe , class: "form-control" %>
     <br>
     <%= submit_tag "Search", class: "btn btn-primary btn-sm" %>
     
