--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,9 +1,17 @@
 <li>
+	<%= link_to image_tag(gravatar_url(user)), user %>
 	<%= user.email %>
-	<%= user.name %>
+	<%= link_to user.name, user %>
 	<%= user.type_of_users %>
 	<%= user.active %>
 	<%= link_to 'Show', user %>
-	<%= link_to 'Edit', edit_user_path(user) %>
-	<%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%if current_user.present?%>
+  	<% if current_user.type_of_users == 3 && !current_user?(user) %>
+    	| <%= link_to "delete", user, method: :delete,
+                                  data: { confirm: "You sure?" } %>
+  	<% end %>
+  	<% if current_user?(user) %>
+    	| <%= link_to 'Edit', edit_user_path(user) %>
+  	<% end %>
+  <%end %>
 </li>
