--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,33 +2,10 @@
 
 <h1>Listing Users</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Email</th>
-      <th>Password digest</th>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Active</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<ul class="users">
+  <%= render @users %>
+</ul>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.email %></td>
-        <td><%= user.password_digest %></td>
-        <td><%= user.name %></td>
-        <td><%= user.type_of_users %></td>
-        <td><%= user.active %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
 <br>
 
