--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,5 +11,11 @@
     </section>
   </div>
 </div>
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+
+<%if current_user.present?%>
+    <% if current_user?(@user) %>
+      <%= link_to 'Edit', edit_user_path(@user) %>
+    <% end %>
+  <%end %>
+
+| <%= link_to 'Back', users_path %>
