Interest buttons logic and created job_user table for connection

--- a/app/views/canditates/index.html.erb
+++ b/app/views/canditates/index.html.erb
@@ -21,7 +21,9 @@
 <div class= "container">
   <% if @canditates.present? %>
     <ul class="users">
-      <%= render @canditates %>
+      <% @canditates.each do |user| %>
+         <%= render 'shared/user_item', user: user %>
+      <% end %>
     </ul>
     
   <% else %>
