--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -7,7 +7,7 @@
   </aside>
   <div class="col-md-10">
     <section class="micropost_form">
-      <%= render 'shared/job' %>
+      <%= render 'shared/job_info' %>
     </section>
   </div>
 </div>
