--- a/app/views/shared/_user_basic_info.html.erb
+++ b/app/views/shared/_user_basic_info.html.erb
@@ -1,21 +1,4 @@
 <h1><%= @user.name %></h1>
 <%= link_to image_tag(gravatar_url( @user)),  @user %>
 <span><%= link_to "view my profile",  @user %></span>
-<%if current_user.present? %>
-	<%if current_user.type_of_users == 1 && @user.type_of_users == 2 %>
-		<br>
-		<%= link_to 'Show Interest To Company', '#' , class: "btn btn-primary btn-sm" %>
-		<br>
-		<br>
-	<%elsif current_user.type_of_users == 2  && @user.type_of_users == 1 %>
-		<br>
-		<%= link_to 'Show Interest To Canditate', '#' , class: "btn btn-primary btn-sm" %>
-		<br>
-	<%elsif current_user.type_of_users == 3 %>
-	
-		<br>
-		<%= link_to 'Edit', '#' , class: "btn btn-primary btn-sm" %>
-		<br>
-		
-	<%end%>
-<%end%>
+<%= render 'shared/interest_buttons',  user: @user, is_job_element: false %>
