--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,9 @@
 <h1>Listing Users</h1>
 
 <ul class="users">
-  <%= render @users %>
+  <% @users.each do |user| %>
+  	<%= render 'shared/user_item', user: user  %>
+  <% end %>
 </ul>
 
 
