--- a/app/views/shared/_interest_buttons.html.erb
+++ b/app/views/shared/_interest_buttons.html.erb
@@ -4,7 +4,11 @@
 	<%if is_job_element %>
 		<%if current_user.type_of_users == 1%>
 			<br>
-			<%= link_to 'Apply To Job', '#' , class: "btn btn-primary btn-sm" %>
+			<% if !current_user.following_job?(job,current_user)%>
+				<%= link_to 'Apply To Job', job_user_relationship_create_path(job_id: job.id), class: "btn btn-primary btn-sm" %>
+			<%else%>
+				<%= link_to 'Withdraw The Apply', job_user_relationship_destroy_path(job_id: job.id),  class: "btn btn-primary btn-sm" %>
+			<%end%>
 			<br>
 		<%elsif current_user?(user)  || isAdmin?(current_user) %>
 			<%if isAdmin?(current_user) && !current_user?(user) %>
