All buttons are working for the interest/not-interested

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
               <li><%= link_to "Home",   root_path %></li>
               <li><%= link_to "Companies",  companies_path%></li>
               <li><%= link_to "Canditates", canditates_path %></li>
-              <li><%= link_to "Jobs", '#' %></li>
+              <li><%= link_to "Jobs", jobs_path %></li>
               <li><%= link_to "News", notices_path %></li>
             <% end %>
           </ul>
