--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 		      <li><a href="http://news.railstutorial.org/">News</a></li>
 		    </ul>
 		  </nav>-->
-	    </footer> -->
+	    </footer> 
     </div>
   </body>
 </html>
