--- a/app/views/users/canditate_home.html.erb
+++ b/app/views/users/canditate_home.html.erb
@@ -1,12 +1,29 @@
-<div class= "center jumbotron">
+<div class= "center jumbotron col-md-6">
   <% if @jobs_interested.present? %>
     <ul class="users">
       <% @jobs_interested.each do |job| %>
          <%= render 'shared/job_item', job: job %>
       <% end %>
     </ul>
+	<%= will_paginate @jobs_interested, :param_name => 'jobs_page' %>
     
   <% else %>
     <p>There are no jobs that you applied </p>
   <% end %>
 </div>
+
+<div class= "center jumbotron col-md-6">
+  <% if @companies_interested_to_me.present? %>
+    <ul class="users">
+      <% @companies_interested_to_me.each do |user| %>
+         <%= render 'shared/user_item', user: user %>
+      <% end %>
+    </ul>
+  <%= will_paginate @companies_interested_to_me,  :param_name => 'companies_page' %>
+    
+  <% else %>
+    <p>There are no companies interested in you </p>
+  <% end %>
+</div>
+
+
