--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -2,35 +2,14 @@
 
 <h1>Listing Notices</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Date</th>
-      <th>Summary</th>
-      <th>Text</th>
-      <th>Active</th>
-      <th>Prior</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<ul class="users">
+  <% @notices.each do |notice| %>
+    <%= render 'shared/notice_item', notice: notice  %>
+  <% end %>
+</ul>
 
-  <tbody>
-    <% @notices.each do |notice| %>
-      <tr>
-        <td><%= notice.title %></td>
-        <td><%= notice.date %></td>
-        <td><%= notice.summary %></td>
-        <td><%= notice.text %></td>
-        <td><%= notice.active %></td>
-        <td><%= notice.prior %></td>
-        <td><%= link_to 'Show', notice %></td>
-        <td><%= link_to 'Edit', edit_notice_path(notice) %></td>
-        <td><%= link_to 'Destroy', notice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
+<br>
 
 <br>
 
