Layout views done

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -251,3 +251,73 @@ span.picture {
   padding: 0;
 }
 
+#search-form {
+  height: 100px;
+}
+
+.form-control{
+  width: 25%
+}
+
+.canditatelist{
+  margin-top: 115px
+}
+
+.imageContainer
+{
+    position:relative;
+    margin:4px 4px 4px 4px;
+    border:4px solid #333;
+    float: left;
+    display:inline-block;
+    min-height: 40px;
+    width: 48%;
+}
+
+/*  SECTIONS  */
+.section {
+  clear: both;
+  padding: 0px;
+  margin: 0px;
+}
+
+/*  COLUMN SETUP  */
+.col {
+  display: block;
+  float:left;
+  margin: 1% 0 1% 1.6%;
+}
+.col:first-child { margin-left: 0; }
+
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+/*  GRID OF TWO  */
+.span_2_of_2 {
+  width: 100%;
+}
+.span_1_of_2 {
+  width: 49.2%;
+}
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+  .col { 
+    margin: 1% 0 1% 0%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .span_2_of_2, .span_1_of_2 { width: 100%; }
+}
+
+.jobs {
+
+    width: 50%;
+    height: 100%;
+    padding: 0px;
+    margin: 10px;
+}
