--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,60 +1,70 @@
-<h1>Last offers</h1>
-<div class= "container">
-  <% if @jobs_home.present? %>
-    <ul class="users">
-      <% @jobs_home.each do |job| %>
-         <%= render 'shared/job_item', job: job %>
-      <% end %>
-    </ul>
-    
+
+<div class= "center col-md-6">
+  
+  <div class= "center jumbotron">
+    <h2>Last offers</h2>
+  
+    <% if @jobs_home.present? %>
+      <ul class="users">
+        <% @jobs_home.each do |job| %>
+           <%= render 'shared/job_item', job: job %>
+        <% end %>
+      </ul>
+      
+    <br>
+    <%= link_to 'Show All Jobs', jobs_path %>
+    <% else %>
+      <p>There are no job offers>.</p>
+    <% end %>
+  </div>
   <br>
-  <%= link_to 'Show All Jobs', jobs_path %>
-  <% else %>
-    <p>There are no job offers>.</p>
-  <% end %>
-</div>
-
-<h1>Last Companies</h1>
-<div class= "container">
-  <% if @companies_home.present? %>
-    <ul class="users">
-      <% @companies_home.each do |user| %>
-         <%= render 'shared/user_item', user: user %>
-      <% end %>
-    </ul>
-    <br>
-  <%= link_to 'Show All Companies', companies_path %>
-  <% else %>
-    <p>There are no companies</p>
-  <% end %>
-</div>
-
-<h1>Last notices</h1>
-<div class= "container">
-  <% if @notices_home.present? %>
-    <ul class="users">
-      <% @notices_home.each do |notice| %>
-         <%= render 'shared/notice_item', notice: notice %>
-      <% end %>
-    </ul>
-    <br>
-  <%= link_to 'Show All Notices', notices_path %>
-  <% else %>
-    <p>There are no notices </p>
-  <% end %>
-</div>
-
-<h1>Last Canditates</h1>
-<div class= "container">
-  <% if @canditates_home.present? %>
-    <ul class="users">
-      <% @canditates_home.each do |user| %>
-         <%= render 'shared/user_item', user: user %>
-      <% end %>
-    </ul>
+  <br>
+  <div class= "center jumbotron">
+    <h2>Last Companies</h2>
+    <% if @companies_home.present? %>
+      <ul class="users">
+        <% @companies_home.each do |user| %>
+           <%= render 'shared/user_item', user: user %>
+        <% end %>
+      </ul>
       <br>
-  <%= link_to 'Show All Canditates', canditates_path %>
-  <% else %>
-    <p>There are no canditates</p>
-  <% end %>
+    <%= link_to 'Show All Companies', companies_path %>
+    <% else %>
+      <p>There are no companies</p>
+    <% end %>
+  </div>
+</div>
+
+<div class= "center col-md-6">
+  
+  <div class= "center jumbotron">
+    <h2>Last notices</h2>
+    <% if @notices_home.present? %>
+      <ul class="users">
+        <% @notices_home.each do |notice| %>
+           <%= render 'shared/notice_item', notice: notice %>
+        <% end %>
+      </ul>
+      <br>
+    <%= link_to 'Show All Notices', notices_path %>
+    <% else %>
+      <p>There are no notices </p>
+    <% end %>
+  </div>
+  <br>
+  <br>
+  <div class= "center jumbotron">
+    <h2>Last Canditates</h2>
+    <% if @canditates_home.present? %>
+      <ul class="users">
+        <% @canditates_home.each do |user| %>
+           <%= render 'shared/user_item', user: user %>
+        <% end %>
+      </ul>
+        <br>
+    <%= link_to 'Show All Canditates', canditates_path %>
+    <% else %>
+      <p>There are no canditates</p>
+    <% end %>
+  </div>
 </div>
