--- a/app/views/users/company_home.html.erb
+++ b/app/views/users/company_home.html.erb
@@ -1,27 +1,42 @@
-<div class= "center jumbotron col-md-6">
-  <% if @jobs_served.present? %>
-    <ul class="users">
-      <% @jobs_served.each do |job| %>
-         <%= render 'shared/job_item', job: job %>
-      <% end %>
-    </ul>
-  <%= will_paginate @jobs_served, :param_name => 'jobs_page' %>
-    
-  <% else %>
-    <p>There are no jobs that you served </p>
-  <% end %>
+<div class= "center col-md-6">
+  
+  <div class= "center jumbotron ">
+    <h2> Jobs That I Served</h2>
+    <% if @jobs_served.present? %>
+      <ul class="users">
+        <% @jobs_served.each do |job| %>
+           <%= render 'shared/job_item', job: job %>
+        <% end %>
+      </ul>
+    <%= will_paginate @jobs_served, :param_name => 'jobs_page' %>
+      
+    <% else %>
+      <p>There are no jobs that you served </p>
+    <% end %>
+  </div>
+
+  <div class= "center jumbotron ">
+    <h2> Canditates That interested to me</h2>
+    <% if @canditates_interested_to_me.present? %>
+      <ul class="users">
+        <% @canditates_interested_to_me.each do |user| %>
+           <%= render 'shared/user_item', user: user %>
+        <% end %>
+      </ul>
+    <%= will_paginate @canditates_interested_to_me,  :param_name => 'companies_page' %>
+      
+    <% else %>
+      <p>There are no Canditates interested in you </p>
+    <% end %>
+  </div>
+
 </div>
 
+
 <div class= "center jumbotron col-md-6">
-  <% if @canditates_interested_to_me.present? %>
-    <ul class="users">
-      <% @canditates_interested_to_me.each do |user| %>
-         <%= render 'shared/user_item', user: user %>
-      <% end %>
-    </ul>
-  <%= will_paginate @canditates_interested_to_me,  :param_name => 'companies_page' %>
-    
-  <% else %>
-    <p>There are no Canditates interested in you </p>
-  <% end %>
-</div>
+  <h2 > My Area</h2>
+  <div>
+   <%= link_to 'Edit', edit_user_path(current_user) , class: "btn btn-primary btn-sm" %> 
+   <%= link_to 'Change Password', '#' , class: "btn btn-primary btn-sm" %> 
+
+  </div>
