--- a/app/views/shared/_follow_job.html.erb
+++ b/app/views/shared/_follow_job.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(JobUserRelationship.create, remote: true) do |f| %>
 			  <div><%= hidden_field_tag :job_id, job.id %>
 			  <%= hidden_field_tag :user_id, user.id %></div>
-			  <%= f.submit "Show Interest", class: "btn btn-primary" %>
+			  <%= f.submit "Show Interest", class: "btn btn-primary  col-xs" %>
 			<% end %>
