--- a/app/views/users/canditate_home.html.erb
+++ b/app/views/users/canditate_home.html.erb
@@ -1,4 +1,9 @@
-<div class= "center jumbotron col-md-6">
+
+
+<div class= "center  col-md-6">
+  
+  <div class= "center jumbotron margin: 20px">
+  <h2> Jobs That I Applied</h2>
   <% if @jobs_interested.present? %>
     <ul class="users">
       <% @jobs_interested.each do |job| %>
@@ -10,9 +15,10 @@
   <% else %>
     <p>There are no jobs that you applied </p>
   <% end %>
-</div>
+  </div>
 
-<div class= "center jumbotron col-md-6">
+  <div class= "center jumbotron margin: 20px">
+  <h2> Companies That Insterested in Me</h2>
   <% if @companies_interested_to_me.present? %>
     <ul class="users">
       <% @companies_interested_to_me.each do |user| %>
@@ -24,6 +30,15 @@
   <% else %>
     <p>There are no companies interested in you </p>
   <% end %>
+  </div>
 </div>
+ 
 
+<div class= "center jumbotron col-md-6">
+  <h2 > My Area</h2>
+  <div class = "container">
+   <%= link_to 'Edit', edit_user_path(current_user) , class: "btn btn-primary btn-sm" %> 
+   <%= link_to 'Change Password', '#' , class: "btn btn-primary btn-sm" %> 
 
+  </div>
+</div>
