--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,6 +16,7 @@
     <%= f.input :presentation %>
     <%= f.input :habits %>
     <%= f.input :experience %>
+    <%= f.input :isworking %>
     <%= f.hidden_field :active  %>
     
   </div>
