--- a/app/views/users/before_sign_up.html.erb
+++ b/app/views/users/before_sign_up.html.erb
@@ -1,6 +1,14 @@
+<h1>New User</h1>
+
 <div class="container centerDiv">
-	<div class="jumbotron center col-md-6">
-        <p class="lead"><%= link_to 'I am a User' , new_user_path(:user_type => '1') ,class: "btn btn-primary btn-lg btn-block" %></p>
-        <p><%= link_to 'I am a Company', new_user_path(:user_type => '2'), class: "btn btn-primary  btn-lg btn-block" %></p>
+	<div class="fluid">
+        <p><%= link_to 'I am a User' , new_user_path(:user_type => '1'),  {:style=>'padding-top: 50px; padding-bottom: 50px;', :class => "btn btn-primary btn-lg btn-block"}  %>
+        </p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="fluid">
+        <p><%= link_to 'I am a Company', new_user_path(:user_type => '2'), {:style=>'padding-top: 50px; padding-bottom: 50px;', :class => "btn btn-primary btn-lg btn-block"} %></p>
     </div>
 </div>
