--- a/app/views/users/company_home.html.erb
+++ b/app/views/users/company_home.html.erb
@@ -2,19 +2,51 @@
   
   <div class= "center jumbotron ">
     <h2> Jobs That I Served</h2>
-    <% if @jobs_served.present? %>
+    <% if @jobs_served_active.present? %>
       <ul class="users">
-        <% @jobs_served.each do |job| %>
+        <% @jobs_served_active.each do |job| %>
            <%= render 'shared/job_item', job: job %>
         <% end %>
       </ul>
-    <%= will_paginate @jobs_served, :param_name => 'jobs_page' %>
+    <%= will_paginate @jobs_served_active, :param_name => 'jobs_page_active' %>
       
     <% else %>
-      <p>There are no jobs that you served </p>
+      <p>There are no jobs that you served actively</p>
     <% end %>
+    <br>
+    <%= link_to 'Add new Offer', new_job_path , class: "btn btn-primary btn-sm" %> 
   </div>
 
+  <p>
+
+   <div class= "center jumbotron ">
+    <h2> History</h2>
+    <% if @jobs_served_passive.present? %>
+      <ul class="users">
+        <% @jobs_served_passive.each do |job| %>
+           <%= render 'shared/job_item', job: job %>
+        <% end %>
+      </ul>
+    <%= will_paginate @jobs_served_passive, :param_name => 'jobs_page_passive' %>
+      
+    <% else %>
+      <p>There are no jobs that you served in the past </p>
+    <% end %>
+    <br>
+    <%= link_to 'Add new Offer', new_job_path , class: "btn btn-primary btn-sm" %> 
+  </div>
+
+</div>
+
+
+<div class= "center col-md-6">
+  <div class= "center jumbotron ">
+    <h2 > My Area</h2>
+   <%= link_to 'Edit', edit_user_path(current_user) , class: "btn btn-primary btn-sm" %> 
+   <%= link_to 'Change Password', change_password_user_path , class: "btn btn-primary btn-sm" %> 
+  </div>
+  <p>
+  
   <div class= "center jumbotron ">
     <h2> Canditates That interested to me</h2>
     <% if @canditates_interested_to_me.present? %>
@@ -29,14 +61,4 @@
       <p>There are no Canditates interested in you </p>
     <% end %>
   </div>
-
 </div>
-
-
-<div class= "center jumbotron col-md-6">
-  <h2 > My Area</h2>
-  <div>
-   <%= link_to 'Edit', edit_user_path(current_user) , class: "btn btn-primary btn-sm" %> 
-   <%= link_to 'Change Password', '#' , class: "btn btn-primary btn-sm" %> 
-
-  </div>
