--- a/app/views/users/canditate_home.html.erb
+++ b/app/views/users/canditate_home.html.erb
@@ -38,7 +38,7 @@
   <h2 > My Area</h2>
   <div class = "container">
    <%= link_to 'Edit', edit_user_path(current_user) , class: "btn btn-primary btn-sm" %> 
-   <%= link_to 'Change Password', change_password_path , class: "btn btn-primary btn-sm" %> 
+   <%= link_to 'Change Password', change_password_user_path , class: "btn btn-primary btn-sm" %> 
 
   </div>
 </div>
