--- a/app/views/users/before_sign_up.html.erb
+++ b/app/views/users/before_sign_up.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container centerDiv">
 	<div class="fluid">
-        <p><%= link_to 'I am a User' , new_user_path(:user_type => '1'),  {:style=>'padding-top: 50px; padding-bottom: 50px;', :class => "btn btn-primary btn-lg btn-block"}  %>
+        <p><%= link_to 'I am a Canditate' , new_user_path(:user_type => '1'),  {:style=>'padding-top: 50px; padding-bottom: 50px;', :class => "btn btn-primary btn-lg btn-block"}  %>
         </p>
     </div>
     <br>
