--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,14 +11,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "sample app", root_path, id: "logo" %>
+          <% if logged_in? && current_user.type_of_users == 3%>
+            <%= link_to "sample app", backoffice_home_path, id: "logo" %>
+          <%else %>
+            <%= link_to "sample app", root_path, id: "logo" %>
+          <% end %>
+          
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-left">
             <% if logged_in? && current_user.type_of_users == 3%>
-              <li><%= link_to "Home",   root_path %></li>
-              <li><%= link_to "Users", users_path %></li>
-              <li><%= link_to "Notices", notices_path %></li>
+              <li><%= link_to "Home",   backoffice_home_path %></li>
+              <li><%= link_to "Users", backoffice_users_all_path %></li>
+              <li><%= link_to "Notices", backoffice_notices_all_path %></li>
             <%else %>
               <li><%= link_to "Home",   root_path %></li>
               <li><%= link_to "Companies",  companies_path%></li>
