--- a/app/views/notices/_form.html.erb
+++ b/app/views/notices/_form.html.erb
@@ -1,18 +1,21 @@
-<%= simple_form_for(@notice) do |f| %>
+<%= simple_form_for(@notice, :html => {:novalidate => true}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :date, as: :datepicker, required: false,
+    <%= f.input :date, as: :datepicker, required: true,
     :placeholder => 'Select date', input_html: {class: "form-control"},
     label: "Date: " %>
-    <%= f.input :summary %>
-    <%= f.input :text %>
+    <%= f.label :summary %>
+    <%= f.text_area  :summary , :class => "tinymce"  %>
+    <br>
+    <%= f.label :text %>
+    <%= f.text_area  :text, :class => "tinymce"  %>
     <%= f.input :active %>
     <%= f.input :prior %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit , class: "btn btn-primary"%>
   </div>
 <% end %>
