--- a/app/views/shared/_user_item.html.erb
+++ b/app/views/shared/_user_item.html.erb
@@ -1,6 +1,6 @@
 
 	<li>	
-			<%= link_to image_tag(gravatar_url(user)), user %>
+			<%= link_to image_tag(user.avatar.url(:thumb)), user %>
 			<%= user.email %>
 			<%= link_to user.name,user %>
 			<br>
